# gold_ai

./: .gitignore  LICENSE  README.md
haile_model/alchemy/: README.md  generate_backward.py  pyproject.toml  stats.json
haile_model/alchemy/conf/base/: globals.yml  logging.yml
haile_model/alchemy/conf/base/catalog/: catalog_global.yml
haile_model/alchemy/conf/base/parameters/: parameters_runs_config.yml
haile_model/alchemy/conf/live/: globals.yml
haile_model/alchemy/conf/live/catalog/: catalog_live.yml
haile_model/alchemy/conf/live/optimization/: parameters_downstream.yml  parameters_ui.yml  parameters_upstream.yml
haile_model/alchemy/conf/local/: globals.yml  mlflow.yml
haile_model/alchemy/data/06_models/baseline_cil_recovery/: flc_trained_model.pkl  (+2 more)
haile_model/alchemy/mlruns/0/: meta.yaml
haile_model/alchemy/mlruns/503703738598261571/: meta.yaml
haile_model/alchemy/src/: requirements.txt  setup.py
haile_model/alchemy/src/alchemy/: __init__.py  __main__.py  helper.py  pipeline_registry.py  settings.py
haile_model/alchemy/src/feature_factory/: README.md  __init__.py  datasets.py  feature_factory.py  pydantic_models.py  sample_function.py  utils.py
haile_model/alchemy/src/kedro_utils/: README.md  __init__.py  pipeline_tools.py
haile_model/alchemy/src/modeling/: README.md  __init__.py  datasets.py  utils.py
haile_model/alchemy/src/optimizer/: README.md  __init__.py  exceptions.py  types.py
haile_model/alchemy/src/optimus_core/: README.md  __init__.py  datasets.py  metrics.py  utils.py
haile_model/alchemy/src/preprocessing/: README.md  __init__.py  cleaning.py  datasets.py  imputing.py  on_off_logic.py  resampling.py  timezones.py  utils.py
haile_model/alchemy/src/recommend/: README.md  __init__.py  domain.py  export.py  optimize.py  postprocessing.py  utils.py
haile_model/alchemy/src/reporting/: README.md  __init__.py  config.py
haile_model/alchemy/src/tests/: test_run.py
(+402 files in other folders)
